--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
